--- a/Serein/WPF/Windows/Pages/Server/Download.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Download.xaml
@@ -83,7 +83,7 @@ Click="ServerDownload"
                 IsEnabled="False"/>
             <TextBlock VerticalAlignment="Bottom" Name="DownloadProgressText">下载进度： -</TextBlock>
             <ProgressBar Name="DownloadProgress" Height="20px" Margin="5" VerticalAlignment="Bottom"  Value="0"/>
-            <CheckBox Name="AutoSetupPath" Margin="5" VerticalAlignment="Bottom" Content="将下载的核心设为默认" IsChecked="True"/>
+            <ui:ToggleSwitch Name="AutoSetupPath" Margin="5" VerticalAlignment="Bottom" Content="将下载的核心设为默认" IsChecked="True"/>
         </StackPanel>
         <GroupBox 
         Margin="3"
