--- a/Serein/WPF/Windows/Pages/Function/Frp/Login.xaml
+++ b/Serein/WPF/Windows/Pages/Function/Frp/Login.xaml
@@ -41,8 +41,14 @@
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBox Grid.Row="0" Height="40" Margin="20,0,20,20" VerticalAlignment="Top" ToolTip="用户名" />
-                        <TextBox Grid.Row="1" Height="40" Margin="20" VerticalAlignment="Top" ToolTip="密码"/>
+                        <GroupBox Grid.Row="0" Margin="20,0,20,10" Header="用户名" FontSize="12">
+                            <TextBox Grid.Row="0" Margin="5" MinHeight="40" VerticalAlignment="Center" ToolTip="用户名" />
+                        </GroupBox>
+
+                        <GroupBox Grid.Row="1" Margin="20,10" Header="密码" FontSize="12">
+                            <TextBox Grid.Row="1" Margin="5" MinHeight="40" VerticalAlignment="Center" ToolTip="密码"/>
+                        </GroupBox>
+                        
                         <ui:Button Grid.Row="2" Content="登录" Height="40" Width="200" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Grid>
                     <Grid Grid.Row="4">
