Ver 0.10.0-B1: Add PlayerListView & Menu.

--- a/Serein/WPF/Windows/Pages/Server/Container.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Container.xaml
@@ -47,7 +47,7 @@
                     PageTag="properties"
                     PageType="{x:Type pages:Properties}" />
                 <ui:NavigationItem
-                    x:Name="Usage"
+                    x:Name="PlayerList"
                     Content="玩家列表"
                     Icon="People24"
                     PageTag="playerlist"
