Ver 0.10.0-RC1: Can get player's IP now

--- a/Serein/WPF/Windows/Pages/Server/Panel.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Panel.xaml
@@ -222,7 +222,8 @@
                     DockPanel.Dock="Top"
                     IsReadOnly="True"
                     IsUndoEnabled="False"
-                    UndoLimit="0" />
+                    UndoLimit="0"
+                    TextChanged="PanelRichTextBox_TextChanged"/>
             </DockPanel>
         </GroupBox>
     </Grid>
