Ver 0.12.0-A1: Okay, Okay.
I mean, you're right.

--- a/Serein/WPF/Windows/Pages/Server/Panel.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Panel.xaml
@@ -203,6 +203,31 @@
             Header="控制台">
             <DockPanel>
                 <DockPanel DockPanel.Dock="Bottom">
+                    <ComboBox 
+                        DockPanel.Dock="Left"
+                        Margin="5"
+                        SelectedIndex="0"
+                        SelectionChanged="CommandHeaderSelected_SelectionChanged"
+                        Name="CommandHeader">
+                        <ComboBoxItem >
+                            /
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            say
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            kill
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            effect
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            whitelist
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            broadcast
+                        </ComboBoxItem>
+                    </ComboBox>
                     <ui:Button
                         Margin="5"
                         Padding="0,3"
