--- a/Serein/WPF/Windows/Pages/Server/Plugins.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Plugins.xaml
@@ -53,7 +53,8 @@
                             Name="Refresh"
                             Click="MenuItem_Click"
                             Header="刷新"
-                            SymbolIcon="ArrowClockwise24" />
+                            SymbolIcon="ArrowClockwise24" 
+                            Tag="Refresh"/>
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
