--- a/Hakuu/WPF/Windows/Pages/Server/Panel.xaml
+++ b/Hakuu/WPF/Windows/Pages/Server/Panel.xaml
@@ -142,14 +142,15 @@
                         Click="Restart_Click"
                         Content="重启"
                         Icon="ArrowClockwise24" />
-                    <Button
+                    <ui:Button
                         Grid.Row="1"
                         Grid.Column="1"
                         Margin="3"
                         HorizontalContentAlignment="Stretch"
                         VerticalContentAlignment="Stretch"
                         Click="Kill_Click"
-                        Content="结束进程" />
+                        Content="终止" 
+                        Icon="Stop24"/>
                 </Grid>
             </GroupBox>
             <GroupBox 
